[package]
name = "redis-codec-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.11.0"
redis-proxy-common = { path = "../redis-proxy-common" }