[package]
name = "redis-command-gen"
version = "0.1.0"
edition = "2021"
build = "build_redis_cmd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smol_str = "0.2.1"
lazy_static = "1.4.0"
redis-command = { path = "../redis-command" }

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
redis-command = { path = "../redis-command" }