[package]
name = "redis-proxy-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
anyhow = "1.0.79"
memchr = "2.7.1"
btoi = "0.4.3"
log = "0.4.20"
tokio-util = { version = "0.7.10", features = ["codec"] }
parking_lot = "0.12.1"
crc16 = "0.4.0"
arrayvec = "0.7.4"
thiserror = "1.0.56"
tokio-stream = "0.1.14"
