[package]
name = "redis-proxy-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
enum-iterator = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"