[package]
name = "redis-proxy-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
regex = "1.10.3"
redis-codec-core = { path = "../redis-codec-core" }
redis-proxy-common = { path = "../redis-proxy-common" }
