[package]
name = "redis-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
log = "0.4.20"
anyhow = "1.0.79"
bytes = "1.5.0"
redis-codec-core = { path = "../redis-codec-core" }
env_logger = "0.11.0"
#redis-proxy-filter = { path = "../redis-proxy-filter" }
redis-proxy-common = { path = "../redis-proxy-common" }
regex = "1.10.3"
serde = { version = "1.0.197" ,features = ["derive"]}
toml = "0.8.10"
async-trait = "0.1.77"
futures = "0.3.30"
bb8 = "0.8.3"
