[package]
name = "redis-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
log = "0.4.20"
anyhow = "1.0.79"
bytes = "1.5.0"
redis-codec-core = { path = "../redis-codec-core" }
env_logger = "0.11.0"
redis-proxy-common = { path = "../redis-proxy-common" }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
async-trait = "0.1.77"
futures = "0.3.30"
poolx = "0.1.2"
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"