[package]
name = "redis-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
log = "0.4.20"
anyhow = "1.0.79"
bytes = "1.5.0"
redis-codec-core = { path = "../redis-codec-core" }
env_logger = "0.11.0"
redis-proxy-common = { path = "../redis-proxy-common" }
redis-command-gen = { path = "../redis-command-gen" }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
async-trait = "0.1.77"
futures = "0.3.30"
poolx = "0.1.3"
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
etcd-client = "0.12.4"
arc-swap = "1.7.0"
serde_json = "1.0.114"
dashmap = "5.5.3"
smol_str = "0.2.1"